# pyautogui

./: pyproject.toml
pyautogui/: __init__.py  _pyautogui_wayland.py
