[project]
name = "pyautogui"
version = "0.9.54"
description = "UI Automation Library for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "pyscreenshot>=3.1",
    "pyscreeze>=1.0.1",
    "python-ydotool>=1.1.0; platform_system == \"Linux\"",
    "pytweening>=1.2.0",
    "wayland-automation>=0.2.1; platform_system == \"Linux\"",
]
